scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project_Milestone__c/Demo_Project_Milestone__c.object-meta.xml
<CustomObject>
    <label>Demo Milestone</label>
    <pluralLabel>Demo Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>