scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project_Milestone__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>