scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project_Milestone__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>